checkbox updates under the images

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1144,8 +1144,12 @@
 		padding-top: 50px;
 	}
 
-	.check-answer:hover {
-		border: solid 5px green;
+	.check-answer {
+		text-align: center;
+	}
+
+	.check-answer i:hover {
+		color: green;
 	}
 /* Section/Article */
 
