--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1723,6 +1723,7 @@
 		.riddleContent{
 			margin:auto;
 		}
+
 		.riddleText{
 		text-align: center;
 		font-size: 35px;
@@ -1764,3 +1765,7 @@
 		.check {
 			background-image: url("images/button_push.png");
 		}
+
+		.sqs-audio-embed {
+		   visibility: hidden;
+		 }
